<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name"><![CDATA[GB Saver & Chat Locker]]></string>
    <string name="app_name1"><![CDATA[GB Saver & Chat\nLocker]]></string>
    <string name="title1">Introducing the New WhatsApp Lock\nFeature: Secure Your</string>
    <string name="titleintro1">Private Chats\nwith Ease!</string>
    <string name="titleintro2">Control your\nprivacy</string>
    <string name="title2">by locking individual chats on\nWhatsApp now!</string>
    <string name="draweropen">Open</string>
    <string name="drawerclose">Close</string>
    <string name="share">Share With Friends</string>
    <string name="rate_us">Rate</string>
    <string name="privacy">Privacy Policy</string>
    <string name="chatlocker">Chat Lockers</string>
    <string name="directchat">"Direct Chat"</string>
    <string name="status">Status Saver</string>
    <string name="simplepinlock_enter_pin1">Enter new PIN</string>
    <string name="simplepinlock_enter_pin2">Re enter PIN</string>
    <string name="simplepinlock_invalid_pin">Invalid PIN. Try again</string>
    <string name="simplepinlock_pin_match">PIN match successfully</string>
    <string name="simplepinlock_pin_mismatch">PIN mismatch. Try again</string>
    <string name="simplepinlock_request_pin">Enter your PIN to start</string>
    <string name="confirm">Confirm your password</string>
    <string name="not_installed">Whatsapp not installed</string>
    <string name="accessibility_service_des">Go to installed app option and click on whatsapp chat locker.</string>
    <string name="popup_service_des">To Use This app Please Enable Popup Window setting</string>
    <string name="create_your_password">Create your pin</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="enter_your_new_pin_code">Enter your new Pin code</string>
    <string name="simplepinlocknew_pin">Enter New PIN</string>
    <string name="country_name_and_code">%1$s (%2$s)</string>
    <string name="phone_code">+%s</string>
    <string name="country_india_code">in</string>
    <string name="country_full_name_and_phone_code">%1$s +%2$s</string>
    <string name="country_full_name_and_name_code">%1$s (%2$s)</string>
    <string name="country_full_name_name_code_and_phone_code">%1$s (%2$s) +%3$s</string>
    <string name="country_code_and_phone_code">(%1$s) +%2$s</string>
    <string name="error_unregister_carrier_number">EditText for carrier number is not registered. Register it using registerPhoneNumberTextView() before getFullNumber() or setFullNumber().</string>
    <string name="select_country">Select a county</string>
    <string name="search_hint">Search...</string>
    <string name="no_result_found">Results not found</string>
    <string name="allow_whatsapp_access">Allow Whatsapp Access</string>
    <string name="allow_app_to_access_whatsapp_status_folder">Allow <b>All Video Downloader &amp; Saver App</b> to access your Files &amp; Folders ?</string>
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="download_started">Download Started</string>
    <string name="ok">OK</string>
    <string name="whatsapp_not_installed">Whatsapp not installed.</string>
    <string name="wrong_folder">Wrong folder</string>
    <string name="selected_wrong_folder">Selected wrong folder</string>
    <string name="Download">Download</string>
    <string name="download_complete">Download Completed</string>
    <string name="saved_to">Saved to</string>
    <string name="insta_app_name">Instagram</string>
    <string name="download_from_private_account">Download from Private Account</string>
    <string name="paste_link">Paste URL here…</string>
    <string name="view_stories">View Stories and Download from Private Account</string>
    <string name="login">Login</string>
    <string name="how_to_download">How to Download</string>
    <string name="or_download_using_copied_link">or Download using copied link</string>
    <string name="second_how_too">2. Share with GBSaverChatLocker</string>
    <string name="fourth_how_too">2. Open GBSaverChatLocker</string>
    <string name="enter_url">Enter Url</string>
    <string name="enter_valid_url">Enter Valid Url</string>
    <string name="app_not_available">App Not Available.</string>
    <string name="no_net_conn">No Internet Connection</string>
    <string name="facebook_app_name">Facebook</string>
    <string name="download_stories">Download from Stories</string>
    <string name="twitter_app_name">Twitter</string>
    <string name="no_media_on_tweet">No Media on Tweet or Invalid Link</string>
    <string name="tiktok_app_name">TikTok</string>
    <string name="pinterest_app_name">Pinterest</string>
    <string name="sharechat_app_name">ShareChat</string>
    <string name="roposo_app_name">Roposo</string>
    <string name="moj_app_name">Moj</string>

</resources>