<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_16dp"
                    android:src="@drawable/ic_back" />

                <TextView
                    android:id="@+id/app_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/insta_app_name"
                    android:textColor="@color/blackTheme"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/LLOpenInstagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:background="@android:color/transparent">

                    <ImageView
                        android:id="@+id/TVTitle"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:layout_centerHorizontal="true"
                        android:padding="15dp"
                        android:src="@drawable/instagram_icon" />

                    <TextView
                        android:id="@+id/tvAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/TVTitle"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:text="@string/insta_app_name"
                        android:textColor="@color/blackTheme"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:id="@+id/RLLoginInstagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvAppName"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvLoginInstagram"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:padding="10dp"
                            android:text="@string/download_from_private_account"
                            android:textColor="@color/blackTheme"
                            android:textSize="13dp" />

                        <Switch
                            android:id="@+id/SwitchLogin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/tvLoginInstagram"
                            android:clickable="false"
                            android:text=""
                            android:theme="@style/SCBSwitch" />

                    </RelativeLayout>
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/lnr_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingBottom="10dp">

                <RelativeLayout
                    android:id="@+id/RLEdittextLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:elevation="3dp"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/et_text"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:background="@drawable/bg_gradiant_pink"
                        android:hint="@string/paste_link"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/whiteTheme"
                        android:textColorHint="@color/whiteTheme"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:id="@+id/RLDownloadLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/et_text"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioGroup
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/tv_paste"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/ic_pasting"
                                android:button="@android:color/transparent"
                                android:gravity="center"
                                android:paddingLeft="10dp"
                                android:paddingRight="20dp"
                                android:scaleType="fitXY" />

                            <RadioButton
                                android:id="@+id/login_btn1"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:layout_margin="5dp"
                                android:layout_weight="1"
                                android:background="@drawable/ic_downloading"
                                android:button="@android:color/transparent"
                                android:gravity="center"
                                android:paddingLeft="20dp"
                                android:paddingRight="10dp"
                                android:scaleType="fitXY" />
                        </RadioGroup>

                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>
            <LinearLayout
                android:id="@+id/native_ads_big"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>

